crates/toml/tests/snapshots/invalid/ext/datetime/seconds-too-large.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 1997-09-09T12:09:69.09Z
  |       ^^^^^^^^^^^^^^^^^^^^^^^
invalid time, expected second between 00 and 60
